--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <a href="/settings/index.html"><div class="navcontent">Settings</div></a>
         <a href="/about/index.html"><div class="navcontent">About</div></a>
     </div>
-    <p class="title"> Welcome </p>
-    <p class="sentense"> Choose from the navigator above.</p>
-      **this site is now making **<br>
+      **comming soon it will.**<br>
     <footer>Battsh 2025</footer>
   </body>
 </html>
