--- a/programming/unicode.html
+++ b/programming/unicode.html
@@ -22,7 +22,7 @@
     <a href="/about/index.html"><div class="navcontent">About</div></a>
   </div>
   <p></p>
-<p id="sentense>変換前</p>
+<p id="sentense">変換前</p>
 <textarea id="inputText" placeholder="ここにテキストを入力してください"></textarea>
 <button onclick="convertToUnicode()">↓Unicodeに変換↓</button><button onclick="decodeUnicode()">↑文字列に復元↑</button>
 
