--- a/programming/unicode.html
+++ b/programming/unicode.html
@@ -21,16 +21,15 @@
     <a href="/settings/index.html"><div class="navcontent">Settings</div></a>
     <a href="/about/index.html"><div class="navcontent">About</div></a>
   </div>
-  <p></p>
-<p id="sentense">変換前</p>
+<p class="sentense">変換前</p>
 <textarea id="inputText" placeholder="ここにテキストを入力してください"></textarea>
-<button onclick="convertToUnicode()">↓Unicodeに変換↓</button><button onclick="decodeUnicode()">↑文字列に復元↑</button>
+<button onclick="convertToUnicode()">Unicodeに変換</button>
 
 <h2>Unicode変換後</h2>
-<textarea id="unicodeText" placeholder="ここに\uXXXX形式を入力して復元もできます"></textarea>
-
-<h2>Unicode復号後</h2>
-<textarea id="outputText" placeholder="復号後の文字列が表示されます"></textarea>
+<textarea id="unicodeText" placeholder="ここにUnicode\xxxxを入力して復元できます"></textarea>
+<button onclick="decodeUnicode()">文字列に復元</button>
+<h2>Unicode復元後</h2>
+<textarea id="outputText" placeholder="復元された文字列が表示されます"></textarea>
 
 
 <script>
