--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <a href="/settings/index.html"><div class="navcontent">Settings</div></a>
         <a href="/about/index.html"><div class="navcontent">About</div></a>
     </div>
-      **comming soon it will.**<br>
+    <p class="title"><a href="blank.html">about:blank メーカー</a></p>
+    <p>about:blankで様々なサイトを開きます。</p>
+    <p class="title"><a href="unicode.html">unicode変換ツール</a></p>
+    <p>ユニコードへの変換および復元ができます。/p>
+    <p class="title"><a href="percent.html">パーセント変換ツール</a></p>
+    <p>パーセントエンコードとデコードができます。</p>
+    <p class="title"><a href="blank.html">about:blank メーカー</a></p>
+    <p>about:blankで様々なサイトを開きます</p>
+    <p class="title"><a href="blank.html">about:blank メーカー</a></p>
+    <p>about:blankで様々なサイトを開きます</p>
     <footer>Battsh 2025</footer>
   </body>
 </html>
