--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="title"><a href="blank.html">about:blank メーカー</a></p>
     <p>about:blankで様々なサイトを開きます。</p>
     <p class="title"><a href="unicode.html">unicode変換ツール</a></p>
-    <p>ユニコードへの変換および復元ができます。/p>
+    <p>ユニコードへの変換および復元ができます。</p>
     <p class="title"><a href="percent.html">パーセント変換ツール</a></p>
     <p>パーセントエンコードとデコードができます。</p>
     <p class="title"><a href="blank.html">about:blank メーカー</a></p>
