--- a/programming/unicode.html
+++ b/programming/unicode.html
@@ -25,10 +25,10 @@
 <textarea id="inputText" placeholder="ここにテキストを入力してください"></textarea>
 <button onclick="convertToUnicode()">Unicodeに変換</button>
 
-<h2>Unicode変換後</h2>
+<p class="sentense">Unicode変換後</p>
 <textarea id="unicodeText" placeholder="ここにUnicode\xxxxを入力して復元できます"></textarea>
 <button onclick="decodeUnicode()">文字列に復元</button>
-<h2>Unicode復元後</h2>
+<p class="sentense">Unicode復元後</p>
 <textarea id="outputText" placeholder="復元された文字列が表示されます"></textarea>
 
 
